header and nav menu

--- a/home.html
+++ b/home.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" href="css/main.css">
 
     <!--External CDN-->
+    <link href="https://fonts.googleapis.com/css?family=Arvo:300,400,500,600,700" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+    <script src="https://kit.fontawesome.com/eb81328826.js" crossorigin="anonymous"></script>
+    
     <!-- Google verification -->
     <meta name="google-site-verification" content="zgHWVx0OgxuDkOt_GuHju2ZOSrE1fpgmUjV0yrxvo1s" />
 </head>
@@ -25,6 +27,20 @@
         <div class="box"></div>
         <div class="box"></div>
     </div>
+
+    <header>
+        <h2 class="logo">Loïc Rakotoson <span>.</span></h2>
+        <nav>
+            <ul class="menu">
+                <li><a href="#home" class="selected">home</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#skills">skills</a></li>
+                <li><a href="#portfolio">portfolio</a></li>
+                <li><a href="#path">path</a></li>
+                <li><a href="#contact">contact</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
