home content adding

--- a/home.html
+++ b/home.html
@@ -41,6 +41,20 @@
             </ul>
         </nav>
     </header>
+
+    <!--HOME-->
+    <section class="home" id="home">
+        <div class="home-content">
+            <h1>
+                <span class="element" data-text1="Hello world, <br/>I'm Loïc Rakotoson" data-text2="I'm a Data Science student <br/>based in Rennes"
+                    data-text3="I'd like to chat <br/> contact@loicrakotoson.com" data-loop="true" data-backdelay="3000">
+                </span>
+            </h1>
+            <a class="home-down bounce" href="#about"><i class="fas fa-chevron-down"></i></a>
+            <!--Social Buttons-->
+        </div>
+
+    </section>
 </body>
 
 </html>
