grid layout initialisation

--- a/home.html
+++ b/home.html
@@ -23,38 +23,14 @@
 </head>
 
 <body>
-    <div id="preloader">
-        <div class="box"></div>
-        <div class="box"></div>
-    </div>
-
-    <header>
-        <h2 class="logo">Loïc Rakotoson <span>.</span></h2>
-        <nav>
-            <ul class="menu">
-                <li><a href="#home" class="selected">home</a></li>
-                <li><a href="#about">about</a></li>
-                <li><a href="#skills">skills</a></li>
-                <li><a href="#portfolio">portfolio</a></li>
-                <li><a href="#path">path</a></li>
-                <li><a href="#contact">contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!--HOME-->
-    <section class="home" id="home">
-        <div class="home-content">
-            <h1>
-                <span class="element" data-text1="Hello world, <br/>I'm Loïc Rakotoson" data-text2="I'm a Data Science student <br/>based in Rennes"
-                    data-text3="I'd like to chat <br/> contact@loicrakotoson.com" data-loop="true" data-backdelay="3000">
-                </span>
-            </h1>
-            <a class="home-down bounce" href="#about"><i class="fas fa-chevron-down"></i></a>
-            <!--Social Buttons-->
-        </div>
-
-    </section>
+<div class="container">
+    <div id="home">Home</div>
+    <div id="picture">Picture</div>
+    <div id="about">About</div>
+    <div id="portfolio">Portfolio</div>
+    <div id="path">Path</div>
+    <div id="footer">Footer</div>
+</div>
 </body>
 
 </html>
