grid height correction & nav bar

--- a/home.html
+++ b/home.html
@@ -17,20 +17,118 @@
     <link href="https://fonts.googleapis.com/css?family=Arvo:300,400,500,600,700" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/eb81328826.js" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
     
     <!-- Google verification -->
     <meta name="google-site-verification" content="zgHWVx0OgxuDkOt_GuHju2ZOSrE1fpgmUjV0yrxvo1s" />
 </head>
 
 <body>
+<div class="header" id="myHeader">
+    <h2>Loïc Rakotoson<span>.</span></h2>
+    <nav>
+        <ul class="navbar">
+            <li><a href="#home">home</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#skills">skills</a></li>
+            <li><a href="#portfolio">portfolio</a></li>
+            <li><a href="#footer">contact</a></li>
+        </ul>
+    </nav>
+</div>
 <div class="container">
-    <div id="home">Home</div>
+    <div class="home" id="home">Home</div>
     <div id="picture">Picture</div>
-    <div id="about">About</div>
+    <div id="about">About
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+        <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptate esse earum nemo, tenetur beatae maxime,
+        corrupti culpa aperiam ipsam neque ut alias? Excepturi perspiciatis dicta accusamus consequuntur, quisquam in?
+        Odit ducimus dolorum assumenda corrupti possimus commodi repellendus vel dolores libero aperiam fugit quaerat, at
+        accusamus qui amet necessitatibus, quos nihil ipsum laudantium voluptatum praesentium perferendis! Quisquam unde
+        deserunt impedit!
+        Id ea sit fugit, quod voluptatem ducimus ullam harum accusantium illum non quas voluptas corrupti labore culpa
+        blanditiis, earum at, delectus impedit? Inventore sunt, accusamus ex esse aperiam doloremque quaerat!
+        Obcaecati quam, incidunt excepturi alias ut qui necessitatibus ea commodi, itaque corrupti molestias temporibus
+        doloremque dolor, porro mollitia magni? Ut, iusto nulla.
+        <br>
+        <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis enim laborum deleniti. Asperiores pariatur error sint
+        doloremque eum vero similique repellendus delectus nemo debitis autem sapiente omnis, maiores eligendi provident?
+        Minima mollitia distinctio placeat doloremque nobis alias sit neque in maxime non accusamus, voluptate harum quae sunt
+        fugit eius eaque. Veniam ratione sunt dolorum tempora, accusamus quas dolor nisi molestiae.
+        Mollitia pariatur nihil, blanditiis iste laborum ullam consectetur iusto, ab ad fuga eveniet non dolores voluptatum
+        quidem eligendi dignissimos! Aut aperiam obcaecati dolorum. Deserunt officiis voluptatem quibusdam, voluptate laboriosam
+        maxime.
+        Temporibus quae tenetur asperiores consequatur explicabo, rem ducimus odio sapiente accusamus delectus repellendus dicta
+        facilis rerum dolor, excepturi dolores neque necessitatibus eaque, quidem tempora? Delectus, minus natus? Suscipit,
+        possimus esse.
+        Sunt mollitia molestiae ipsa eum cum nam hic ab rerum repellat corrupti dicta, quasi delectus libero quod labore
+        laudantium ullam incidunt suscipit! Excepturi voluptates natus inventore placeat, cum incidunt aperiam?
+        Natus quas fuga ab mollitia dolorum architecto fugit asperiores facere atque quibusdam sunt ex, debitis rem, ad illo quo
+        nobis. Odio iusto sapiente cupiditate! Dicta nesciunt unde optio aperiam eum!
+        Minima, itaque libero. Iste quae nesciunt hic modi dolorem, eos, tempore quos, obcaecati temporibus possimus veritatis
+        unde mollitia a! Mollitia doloribus molestiae fugit recusandae minus nobis minima nemo repellat deleniti!
+        Nobis tempora unde ea, dolorum architecto alias consequuntur vero molestiae iste nisi, sit tempore provident neque.
+        Possimus provident minima, sunt hic incidunt aliquam repudiandae consequuntur placeat magnam, itaque harum porro.
+        Molestias itaque sapiente doloribus explicabo tenetur? Vero ullam et aliquid odit? Totam quasi nostrum harum sed
+        voluptatibus nam esse nulla quos laudantium cupiditate molestias, accusantium autem distinctio quis dolorem id?
+        Totam quisquam nesciunt deleniti ratione enim cumque, itaque repellendus corrupti officia nulla excepturi, autem fugit,
+        modi nostrum omnis! Obcaecati, a soluta! Quasi nemo reiciendis veritatis maxime, facere ducimus ipsa dolorem?
+        Dolorum, recusandae quasi optio, omnis velit enim dolor, iusto deleniti molestias necessitatibus quibusdam corrupti
+        aspernatur saepe reprehenderit tempora? Libero quod soluta porro aspernatur quae! Maiores nobis vel consequuntur
+        eligendi eaque?
+        Neque ad accusamus fuga explicabo in voluptas debitis! Dolorem officiis laborum odio exercitationem officia repudiandae
+        assumenda, culpa, hic, vero cumque dolor explicabo sunt excepturi. Fuga consectetur asperiores dolore iure vel.
+        Maxime molestiae voluptate laboriosam, labore voluptates eveniet sed sint delectus exercitationem beatae ea aliquam hic,
+        expedita consequatur animi repudiandae amet explicabo voluptatum fuga quis voluptatibus modi. Illo qui eligendi ad!
+        Atque reprehenderit possimus dicta fugit. Modi magnam perspiciatis magni quisquam dicta consequuntur exercitationem vel
+        debitis delectus corrupti ea adipisci voluptate, commodi maxime iusto ducimus corporis atque? Quaerat est iure ex?
+        Dicta saepe, quae sit debitis explicabo voluptates, natus voluptatibus in voluptate facilis cum quo doloribus
+        repudiandae qui reprehenderit sint ex architecto quod accusantium veritatis. Accusamus repudiandae doloribus debitis
+        magni fugiat?
+        Ducimus itaque unde sapiente, dolore iste provident asperiores consequatur dicta praesentium, sed illum doloribus neque!
+        Quisquam asperiores repellat at, repudiandae repellendus magni fugiat itaque omnis ratione! Eum quasi nisi iste?
+        Distinctio suscipit non aliquid et. Sequi, illo quos dicta saepe perferendis cum voluptatum accusantium optio fuga, in
+        aperiam nostrum quidem dolorum architecto officiis commodi, officia corporis maiores exercitationem explicabo earum.
+        Vitae id numquam eos incidunt, iusto deleniti, ullam dignissimos doloribus sint non facilis ratione dolorum vero cumque
+        aliquam ipsa! Cupiditate, ipsum aut! Enim impedit atque doloribus, ex corporis laboriosam praesentium?
+        Quos eos obcaecati quod laudantium totam doloremque earum sequi. Pariatur exercitationem similique delectus temporibus
+        voluptatum nulla, velit tempore blanditiis earum et, eius illum modi, quisquam consectetur hic deleniti vero beatae.
+        Cum, excepturi? Fugiat debitis tempore repellendus unde quasi, consequuntur atque dolores excepturi quam ipsam quas sit.
+        Voluptates soluta amet sed iure. Doloremque sunt quod odio neque minima commodi facilis laudantium.
+        <br><br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore ab ea voluptatum, labore dicta quibusdam facilis nemo
+        sunt iste reiciendis perferendis saepe hic aspernatur amet. Reprehenderit sunt labore vero? Neque?
+        Incidunt, nihil, autem quaerat id sint rerum nesciunt ex et aut odio eveniet impedit minima praesentium quod, ullam
+        reprehenderit! Saepe pariatur itaque eius, dolorem numquam architecto voluptate tempore. Cumque, illo.
+        Harum ut fugiat provident dolorem perspiciatis distinctio nulla quidem expedita earum hic, similique a sapiente
+        aspernatur odio culpa rem soluta laboriosam perferendis officia qui. Quas eius itaque dolore atque ipsum.
+        Quam deleniti eius esse totam ipsum nostrum quisquam, quia saepe labore nemo beatae. Ullam doloribus maiores
+        consequuntur eius ea dicta aliquam voluptate, id ex minima rerum veniam, perspiciatis accusantium doloremque!
+        Quia ut repudiandae animi, nihil nostrum quidem inventore quos necessitatibus ipsum ducimus hic facilis deleniti,
+        accusantium et veritatis corrupti beatae. Expedita unde recusandae inventore dolorem explicabo maxime. Error, sapiente
+        eius.
+    </div>
+    <div id="skills">Skills</div>
     <div id="portfolio">Portfolio</div>
     <div id="path">Path</div>
     <div id="footer">Footer</div>
 </div>
+<script>
+window.onscroll = function() {myFunction()};
+
+var header = document.getElementById("myHeader");
+var sticky = header.offsetTop;
+
+function myFunction() {
+  if (window.pageYOffset > sticky) {
+    header.classList.add("nav_fixed");
+  } else {
+    header.classList.remove("nav_fixed");
+  }
+}
+</script>
 </body>
 
 </html>
