--- a/home.html
+++ b/home.html
@@ -87,7 +87,9 @@
     </div>
 </div>
 <div class="container">
-    <div id="picture">Picture</div>
+    <div id="picture">
+        <img src="images/profile.jpg" alt="profile picture">
+    </div>
     <div id="about">        
             About
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
