about & picture section

--- a/home.html
+++ b/home.html
@@ -91,28 +91,41 @@
         <img src="images/profile.jpg" alt="profile picture">
     </div>
     <div id="about">        
-            About
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptate esse earum nemo, tenetur beatae maxime,
-            corrupti culpa aperiam ipsam neque ut alias? Excepturi perspiciatis dicta accusamus consequuntur, quisquam in?
-            Odit ducimus dolorum assumenda corrupti possimus commodi repellendus vel dolores libero aperiam fugit quaerat, at
-            accusamus qui amet necessitatibus, quos nihil ipsum laudantium voluptatum praesentium perferendis! Quisquam unde
-            deserunt impedit!
-            Id ea sit fugit, quod voluptatem ducimus ullam harum accusantium illum non quas voluptas corrupti labore culpa
-            blanditiis, earum at, delectus impedit? Inventore sunt, accusamus ex esse aperiam doloremque quaerat!
-            Obcaecati quam, incidunt excepturi alias ut qui necessitatibus ea commodi, itaque corrupti molestias temporibus
-            doloremque dolor, porro mollitia magni? Ut, iusto nulla.
-            <br>
+            <h2>About me</h2>
+            <p>Hello world !</p>
+            <p>
+                I'm a data science student based in Rennes. I have no special talent, I am only passionately curious. (Albert Einstein)
+            </p>
+            <p>
+                My passion for data science and programming is endless, 80 percent of my time I update my knowledge and discorver data.
+                Entrepreneurial mindset allow to develop my capacity to understand issues and the new possibilities that data can offer,
+                curiousity enable me to sift throught data to find answers and more insights.
+                My experiences in the projects I have been involved in have allowed me to acquire many skills that cannot be learned in
+                college, it is why I think we are all different and unique so teamwork is essential to complete the big puzzle of data
+                science.
+            </p>
+            <p>
+                In my free time, I can be found participating in Eyeka contests to hone my graphics design skills and my creativity,
+                looking up to the stars as an astronogeek or just developing my current personal project.
+            </p>
+            <p class="resume">
+                <a href="assets/Resume_LOIC_RAKOTOSON.pdf">View my resume</a>
+            </p>
     </div>
     <div id="skills">
-        <h3>Skills</h3>
+        <h2 class="section_title">Skills</h2>
         <div class="tools">TOLLS GRAPH ONE</div>
         <div class="expertise">EXPERTISE GRAPH TWO</div>
     </div>
-    <div id="portfolio">Portfolio</div>
-    <div id="path">Path</div>
-    <div id="footer">Footer</div>
+    <div id="portfolio">
+        <h2 class="section_title">Portfolio</h2>
+    </div>
+    <div id="path">
+        <h2 class="section_title">Path</h2>
+    </div>
+    <div id="footer">
+        <h2 class="section_title">Footer</h2>
+    </div>
 </div>
 </body>
 
