--- a/home.html
+++ b/home.html
@@ -114,8 +114,17 @@
     </div>
     <div id="skills">
         <h2 class="section_title">Skills</h2>
-        <div class="tools">TOLLS GRAPH ONE</div>
-        <div class="expertise">EXPERTISE GRAPH TWO</div>
+        <div>
+            <div class="tools">
+                <h3>Language</h3>
+                <img src="images/software.svg" alt="Software">
+            </div>
+            <div class="expertise">
+                <h3>Technical</h3>
+                <img src="images/Skill.svg" alt="Technical skills">
+            </div>
+        </div>
+        
     </div>
     <div id="portfolio">
         <h2 class="section_title">Portfolio</h2>
