--- a/home.html
+++ b/home.html
@@ -128,6 +128,22 @@
     </div>
     <div id="portfolio">
         <h2 class="section_title">Portfolio</h2>
+        <div class="gallery">
+            <div class="gallery_item">
+                <a href="https://github.com/Lrakotoson/Kernode" target="_blank" rel="noopener noreferrer"><img src="images/kernode.png" alt="Kernode"></a>
+                <div class="overlay">
+                    <div class="description">
+                        <p>
+                            Trace image or video. A tool to check trustiness of information.
+                        </p>
+                        <p>
+                            <a href="https://github.com/Lrakotoson/Kernode" target="_blank">
+                                <i class="fas fa-search"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
     </div>
     <div id="path">
         <h2 class="section_title">Path</h2>
