--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
             <li><a href="#about">about</a></li>
             <li><a href="#skills">skills</a></li>
             <li><a href="#portfolio">portfolio</a></li>
-            <li><a href="#footer">contact</a></li>
+            <li><a href="#contact">contact</a></li>
         </ul>
     </nav>
 </header>
@@ -134,7 +134,7 @@
                 <div class="overlay">
                     <div class="description">
                         <p>
-                            Trace image or video. A tool to check trustiness of information.
+                            A tool to check trustiness of information.
                         </p>
                         <p>
                             <a href="https://github.com/Lrakotoson/Kernode" target="_blank">
@@ -144,13 +144,25 @@
                     </div>
                 </div>
             </div>
+        </div>
     </div>
     <div id="path">
         <h2 class="section_title">Path</h2>
     </div>
-    <div id="footer">
-        <h2 class="section_title">Footer</h2>
+    <div id="contact">
+        <h2 class="section_title">Get in touch</h2>
+        <div class="contact_info">
+            <div>
+                <a href="mailto:contact@loicrakotoson.com"><i class="fas fa-envelope"></i></a>
+                <p>contact@loicrakotoson.com</p>
+            </div>
+            <div>
+                <a><i class="fas fa-map-marker-alt"></i></a>
+                <p>Rennes, France</p>
+            </div>
+        </div>
     </div>
+    <div id="footer"></div>
 </div>
 </body>
 
