--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
         </script>
     </div>
 </div>
-<div class="container">
+<div id="container" class="container">
     <div id="picture">
         <img src="images/profile.jpg" alt="profile picture">
     </div>
@@ -130,7 +130,7 @@
         <h2 class="section_title">Portfolio</h2>
         <div class="gallery">
             <div class="gallery_item">
-                <a href="https://github.com/Lrakotoson/Kernode" target="_blank" rel="noopener noreferrer"><img src="images/kernode.png" alt="Kernode"></a>
+                <a href="https://github.com/Lrakotoson/Kernode" target="_blank"><img src="images/kernode.png" alt="Kernode"></a>
                 <div class="overlay">
                     <div class="description">
                         <p>
@@ -162,7 +162,18 @@
             </div>
         </div>
     </div>
-    <div id="footer"></div>
+    <div id="footer">
+        <div>
+            <a href="https://github.com/Lrakotoson" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/loicrakotoson/?locale=en_US" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+        </div>
+        <hr>
+        <p>Copyright © 2019 Loïc Rakotoson</p>
+    </div>
 </div>
 </body>
 
