remove unused files
Remove files in upgrading

--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
         </script>
     </div>
 </div>
-<div id="container" class="container">
+<div class="container">
     <div id="picture">
         <img src="images/profile.jpg" alt="profile picture">
     </div>
