Add Jobtimize to portfolio

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <h2 class="section_title">Portfolio</h2>
         <div class="gallery">
             <div class="gallery_item">
-                <a href="https://github.com/Lrakotoson/Kernode" target="_blank"><img src="images/kernode.png" alt="Kernode"></a>
+                <a href="https://github.com/Lrakotoson/Kernode" target="_blank"><img src="images/kernode.png" alt="Kernode">
                 <div class="overlay">
                     <div class="description">
                         <p>
@@ -143,6 +143,23 @@
                         </p>
                     </div>
                 </div>
+                </a>
+            </div>
+            <div class="gallery_item">
+                <a href="https://loicrakotoson.com/Jobtimize/" target="_blank"><img src="images/jobtimize.png" alt="Jobtimize">
+                <div class="overlay">
+                    <div class="description">
+                        <p>
+                            Python package which collects, standardizes and completes information about job offers
+                        </p>
+                        <p>
+                            <a href="https://loicrakotoson.com/Jobtimize/" target="_blank">
+                                <i class="fas fa-search"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                </a>
             </div>
         </div>
     </div>
