--- a/index.html
+++ b/index.html
@@ -129,22 +129,7 @@
     <div id="portfolio">
         <h2 class="section_title">Portfolio</h2>
         <div class="gallery">
-            <div class="gallery_item">
-                <a href="https://github.com/Lrakotoson/Kernode" target="_blank"><img src="images/kernode.png" alt="Kernode">
-                <div class="overlay">
-                    <div class="description">
-                        <p>
-                            A tool to check trustiness of information.
-                        </p>
-                        <p>
-                            <a href="https://github.com/Lrakotoson/Kernode" target="_blank">
-                                <i class="fas fa-search"></i>
-                            </a>
-                        </p>
-                    </div>
-                </div>
-                </a>
-            </div>
+            
             <div class="gallery_item">
                 <a href="https://loicrakotoson.com/Jobtimize/" target="_blank"><img src="images/jobtimize.png" alt="Jobtimize">
                 <div class="overlay">
@@ -154,6 +139,38 @@
                         </p>
                         <p>
                             <a href="https://loicrakotoson.com/Jobtimize/" target="_blank">
+                                <i class="fas fa-search"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                </a>
+            </div>
+            <div class="gallery_item">
+                <a href="https://loicrakotoson.com/Covid-19/" target="_blank"><img src="images/covid19.png" alt="Covid-19">
+                <div class="overlay">
+                    <div class="description">
+                        <p>
+                            Dashboard to follow in real time the Covid-19 evolution.
+                        </p>
+                        <p>
+                            <a href="https://loicrakotoson.com/Covid-19/" target="_blank">
+                                <i class="fas fa-search"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                </a>
+            </div>
+            <div class="gallery_item">
+                <a href="https://github.com/Lrakotoson/Kernode" target="_blank"><img src="images/kernode.png" alt="Kernode">
+                <div class="overlay">
+                    <div class="description">
+                        <p>
+                            A tool to check trustiness of information.
+                        </p>
+                        <p>
+                            <a href="https://github.com/Lrakotoson/Kernode" target="_blank">
                                 <i class="fas fa-search"></i>
                             </a>
                         </p>
