--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         var typed = new Typed('.typed', {
             strings: [
                 "Hello world,<br>I'm Loïc Rakotoson",
-                "I'm a <span>Data Science</span> student<br>based in Rennes",
+                "I'm a <span>Data Analyst</span><br>based in Rennes",
                 "I'd like to chat<br>contact@loicrakotoson.com",
             ],
             startDelay: 1000,
@@ -54,7 +54,7 @@
             smartBackspace: false,
             backDelay: 3000,
             loop: true,
-            cursorChar: null,
+            cursorChar: "",
         });
     </script>
     <ul class="social">
