Update Portfolio & CSS
- Add Rennes Budget Participatif
- Modify background default image
- Modify display flexbox
- Improve responsive

--- a/index.html
+++ b/index.html
@@ -178,6 +178,22 @@
                 </div>
                 </a>
             </div>
+            <div class="gallery_item">
+                <a href="https://github.com/Lrakotoson/M1Python/tree/master/S2/Data%20Visualization/" target="_blank"><img src="images/rennes_bp.png" alt="Rennes Budget Participatif">
+                <div class="overlay">
+                    <div class="description">
+                        <p>
+                            Dashboard on the different data from the participatory budget campaigns in Rennes.
+                        </p>
+                        <p>
+                            <a href="https://github.com/Lrakotoson/M1Python/tree/master/S2/Data%20Visualization/" target="_blank">
+                                <i class="fas fa-search"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                </a>
+            </div>
         </div>
     </div>
     <div id="path">
