--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 My passion for data science and programming is endless, 80 percent of my time I update my knowledge and discorver data.
                 Entrepreneurial mindset allow to develop my capacity to understand issues and the new possibilities that data can offer,
                 curiousity enable me to sift throught data to find answers and more insights.
-                My experiences in the projects I have been involved in have allowed me to acquire many skills that cannot be learned in
-                college, it is why I think we are all different and unique so teamwork is essential to complete the big puzzle of data
+                My experiences in the projects which I was involved have allowed me to acquire many skills that cannot be learned in
+                college. It is why I think we are all different and unique so teamwork is essential to complete the big puzzle of data
                 science.
             </p>
             <p>
