contact & Jobtimize transfer

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         var typed = new Typed('.typed', {
             strings: [
                 "Hello world,<br>I'm Loïc Rakotoson",
-                "I'm a <span>Data Analyst</span><br>based in Rennes",
-                "I'd like to chat<br>contact@loicrakotoson.com",
+                "I'm a <span>Machine Learning Engineer</span><br>based in Rennes",
+                "Get in touch:<br>contact@loicrakotoson.com",
             ],
             startDelay: 1000,
             typeSpeed: 60,
@@ -131,14 +131,14 @@
         <div class="gallery">
             
             <div class="gallery_item">
-                <a href="https://loicrakotoson.com/Jobtimize/" target="_blank"><img src="images/jobtimize.png" alt="Jobtimize">
+                <a href="http://hirecoffee.github.io/Jobtimize/" target="_blank"><img src="images/jobtimize.png" alt="Jobtimize">
                 <div class="overlay">
                     <div class="description">
                         <p>
                             Python package which collects, standardizes and completes information about job offers
                         </p>
                         <p>
-                            <a href="https://loicrakotoson.com/Jobtimize/" target="_blank">
+                            <a href="http://hirecoffee.github.io/Jobtimize/" target="_blank">
                                 <i class="fas fa-search"></i>
                             </a>
                         </p>
