--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h2>About me</h2>
             <p>Hello world !</p>
             <p>
-                I'm a data science student based in Rennes. I have no special talent, I am only passionately curious. (Albert Einstein)
+                I'm a Machine Learning Engineer R&D based in Rennes. I have no special talent, I am only passionately curious. (Albert Einstein)
             </p>
             <p>
                 My passion for data science and programming is endless, 80 percent of my time I update my knowledge and discorver data.
@@ -105,8 +105,7 @@
                 science.
             </p>
             <p>
-                In my free time, I can be found participating in Eyeka contests to hone my graphics design skills and my creativity,
-                looking up to the stars as an astronogeek or just developing my current personal project.
+                In my free time, you'll find me stargazing if I'm not developing solutions that I've imagined alone or with groups of talented people.
             </p>
             <p class="resume">
                 <a href="assets/resume_en_Lrakotoson.pdf">View my resume</a>
@@ -222,7 +221,7 @@
             </a>
         </div>
         <hr>
-        <p>Copyright © 2019 Loïc Rakotoson</p>
+        <p>Copyright © 2021 Loïc Rakotoson</p>
     </div>
 </div>
 </body>
