Update portfolio | science checker

--- a/index.html
+++ b/index.html
@@ -146,6 +146,24 @@
                 </a>
             </div>
             <div class="gallery_item">
+                <a href="https://science-checker.opscidia.com/" target="_blank"><img src="images/science_checker.png" alt="Science Checker">
+                <div class="overlay">
+                    <div class="description">
+                        <p>
+                            AI pipeline answering question related to medical and health
+                            issues using information extraction on Open Access scientific articles.
+                            With <a href="https://www.opscidia.com/" target="_blank" rel="noopener noreferrer">Opscidia.</a>
+                        </p>
+                        <p>
+                            <a href="https://science-checker.opscidia.com/" target="_blank">
+                                <i class="fas fa-search"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                </a>
+            </div>
+            <div class="gallery_item">
                 <a href="https://loicrakotoson.com/Covid-19/" target="_blank"><img src="images/covid19.png" alt="Covid-19">
                 <div class="overlay">
                     <div class="description">
